8319343: Improve CDS module graph support for --add-modules option